# terrence_3.0

./: TODO.md
.devcontainer/: devcontainer.json
docker/: Docker-Compose.yaml  Dockerfile
ros2/bringup/: package.xml  setup.py
ros2/bringup/config/: ekf_params.yaml  gz_bridge.yaml  nav2_params.yaml  teleop.rviz
ros2/bringup/launch/: autonomy.launch.py  sim.launch.py  teleop.launch.py
ros2/camera/: CMakeLists.txt  package.xml
ros2/camera/launch/: realsense.launch.py
ros2/camera/src/: realsense_node.cpp
ros2/control/: CMakeLists.txt  package.xml  terrence_hwc_plugin.xml
ros2/control/config/: controllers.yaml  joystick.yaml  terrence_hwc.xml
ros2/control/include/control/: arduino_comms.hpp  terrence_controller.hpp  terrence_hwc.hpp
ros2/control/src/: terrence_controller.cpp  terrence_hwc.cpp
ros2/description/: package.xml  setup.py
ros2/description/config/: ros2_controllers.yaml
ros2/description/meshes/: Base.STL  Door.STL  DriverSprocket.STL  DriverWheel.STL  Hopper.STL  Loader.STL  PassSprocket.STL  PassWheel.STL
ros2/description/urdf/: camera.xacro  colors.xacro  gazebo_control.xacro  imu.xacro  lidar.xacro  ros2_control.xacro  terrence.urdf.xacro
ros2/description/worlds/: artemis_arena.sdf  empty.sdf  empty_bullet_featherstone.sdf  ucf_arena.sdf  world.sdf
ros2/description/worlds/meshes/ksc/: artemis-arena-collision.stl  artemis-arena-env.dae
ros2/description/worlds/meshes/rocks/: rock-1.dae  rock-2.dae  rock-3.dae  rock-4.dae  rock-5.dae  rock-6.dae  rock-7.dae  rock-8.dae  rock-divider.dae
ros2/description/worlds/meshes/terrain/: ksc-terrain-1.stl  ksc-terrain-2.stl  ksc-terrain-3.stl  ucf-terrain-1.stl
ros2/description/worlds/meshes/ucf/: ucf-arena.dae
ros2/description/worlds/models/: lfd_boards.sdf
ros2/realsense_wrapper/: package.xml  setup.cfg  setup.py
ros2/realsense_wrapper/launch/: realsense.launch.py
ros2/realsense_wrapper/realsense_wrapper/: realsense_node.py
ros2/sim/: package.xml  setup.py
ros2/src/terrence_autonomy/: setup.py
teensy-framework/: platformio.ini
teensy-framework/src/: main.cpp
teensy_firmware/src/: main.cpp
